updated folder structure

--- a/client/templates/layout.html
+++ b/client/templates/layout.html
@@ -10,6 +10,7 @@
                     {{> sidebar}}
                 </div>
                 <div class="col-md-9">
+                    {{> flashMessages}}
                     {{> yield}}
                 </div>
             </div>
