--- a/client/stylesheets/rateit.css
+++ b/client/stylesheets/rateit.css
@@ -6,3 +6,13 @@ footer{
 	padding-top:10px;
 	margin-top:40px;
 }
+
+.full{
+	width:100%;
+}
+
+.product-row{
+	border-bottom:#ccc 1px solid;
+	padding-bottom:20px;
+	margin-bottom:20px;
+}
