--- a/client/templates/includes/navbar.html
+++ b/client/templates/includes/navbar.html
@@ -12,7 +12,7 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="{{pathFor 'home'}}">Home</a></li>
+                    <li><a href="{{pathFor 'home'}}">Home</a></li>
                     <li><a href="{{pathFor 'products'}}">Products</a></li>
                     <li><a href="{{pathFor 'add_product'}}">Add Product</a></li>
                 </ul>
