updated folders structure and changed routes

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -8,7 +8,8 @@
 				<h4>{{name}}</h4>
 				<p>Average Rating: RATING</p>
 				<p>{{truncateText description 150}}</p>
-				<a href="{{pathFor 'product'}}" class="btn btn-default">Read Reviews</a> <a href="{{pathFor 'newReview'}}" class="btn btn-primary">Add Review</a>
+				<a href="{{pathFor 'product'}}" class="btn btn-default">Read Reviews</a> 
+				<a href="{{pathFor 'new_review'}}" class="btn btn-primary">Add Review</a>
 			</div>
 		</div>
 	{{else}}
