updated home and mehods files

--- a/client/templates/includes/navbar.html
+++ b/client/templates/includes/navbar.html
@@ -14,7 +14,12 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{{pathFor 'home'}}">Home</a></li>
                     <li><a href="{{pathFor 'products'}}">Products</a></li>
-                    <li><a href="{{pathFor 'add_product'}}">Add Product</a></li>
+                    {{#if currentUser}}
+                        <li><a href="{{pathFor 'add_product'}}">Add Product</a></li>
+                    {{/if}}
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    {{> loginButtons}} <!-- here -->
                 </ul>
             </div>
         </div>
