--- a/client/templates/includes/sidebar.html
+++ b/client/templates/includes/sidebar.html
@@ -1,3 +1,8 @@
 <template name="sidebar">
-	This is sidebar
+	<h3>Product categories</h3>
+	<div class="list-group">
+		{{#each categories}}
+			<a href="/categories/{{slug}}" class="list-group-item">{{name}}</a>
+		{{/each}}
+	</div>
 </template>
