--- a/client/templates/product/product.html
+++ b/client/templates/product/product.html
@@ -11,6 +11,7 @@
 		</div>
     </div>
     
+    {{#if currentUser}}
     <div class="row">
         <div class="col-md-12">
 			<div class="text-right">
@@ -18,8 +19,9 @@
 			</div>
 		</div>
     </div>
-    
     <hr>
+    {{/if}}
+    
     <h4>Reviews & Ratings</h4>
 	{{#each reviews}}
 	<div class="row">
